syntax = "proto3";
option go_package = "/gen";
import "google/protobuf/timestamp.proto";

message Metadata {
    string id = 1;
    string title = 2;
    string description = 3;
    string director = 4;
    google.protobuf.Timestamp release_date = 5;
}

message MovieDetails {
    float rating = 1;
    Metadata metadata = 2;
}

service MetadataService {
    rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse);
}

message GetMetadataRequest {
    string movie_id = 1;
}

message GetMetadataResponse {
    Metadata metadata = 1;
}